assets/scss/main.scss
/* ... */
/* 3. Grid */

/*
 * Since developing with mobile first approach, there is no need to wrap this
 * in a media query.
 * This style doesn't need a grid, it's a single column, our base layout.
 */

.container {
    max-width: 960px;
    margin: 0 auto;
}

/* 4. Layout */

footer,
header {
    color: white;

    a {
        &:hover {
            color: $secondary-color;
        }
    }
}

main {
    padding: 1rem 1rem .5rem;
}

.hp-box {
    background: white;

    a {
        color: $rich-black;
    }

    h2 {
        border-left: 10px solid lighten($primary-color, 60%);
        font-size: rem-calc(30);
        margin-bottom: 0;
        padding: .5rem .5rem 1rem;
    }

    img {
        border: 0;
        height: 100%;
        object-fit: cover;
        width: 100%;
    }

    .img-wrapper {
        height: rem-calc(150);
        max-width: rem-calc(700);
    }

    p {
        font-size: rem-calc(14px);
        padding: .5rem rem-calc(18) 0;
    }

    path {
        fill: lighten($primary-color, 60%);
    }
}

// 4.1 Header

header {
    position: relative;

    a {
        color: white;
    }

    &.top-header {

        &::after {
            background: url("/static/images/header-bg.jpg") center center;
            content: "";
            height: 100%;
            left: 0;
            opacity: 0.1;
            position: absolute;
            top: 0;
            width: 100%;
            z-index: -1; // Otherwise it disables active areas
        }

        h1 {
            padding-left: 1rem;
            padding-right: 1rem;
        }
    }

    .grid-container {
        position: relative;
    }

    .avatar {
        border-radius: 50%;

        img {
            border-radius: 50%;
        }
    }
}

// 4.2 Navigation

.dropdown {
    &.menu {
        margin-left: 1rem;

        a {
            padding: .75rem .625rem;
        }
    }
}

.menu {
    font-family: $header-font-family;

    a {
        border-bottom: 0;

        &:hover {
            background: lighten($primary-color, 5%);
            border-bottom: 0;
        }
    }
}

.top-bar {
    color: white;

    a {
        color: white;
        padding: .75rem .25rem;
    }
}

.top-nav {
    background: $topbar-background;
}


// 4.3 Main

main {
    background: lighten($primary-color, 70%);

    a {
        border-bottom: 1px dotted #d8d8d8;
    }

    small {
        color: scale-color($rich-black, $lightness: 20%);
    }
}

.bydate {
    font-size: .75rem;
    font-style: italic;
}

.intro {
    color: lighten(black, 31%);
    font-size: 1.125rem;
    line-height: 1.75;
}

.metadata {
    background: scale-color($secondary-color, $lightness: 50%);
    font-size: .875rem;
    padding: .5rem 1rem;

    button,
    .button {
        margin-bottom: 0;

        &.active {
            background: scale-color($primary-color, $lightness: 70%);
            border-bottom: 3px solid $primary-color;
        }

        &:hover {
            background: $primary-color;
            color: $white;
        }

        &.secondary {
            border-color: scale-color($secondary-color, $lightness: -40%);
            color: scale-color($secondary-color, $lightness: -40%);

            &:hover {
                background: transparent;
                border-color: scale-color($secondary-color, $lightness: -60%);
                color: scale-color($secondary-color, $lightness: -60%);
            }
        }

        .label {
            &:hover {
                cursor: pointer;
            }

            font-size: .6125rem;
        }
    }

    .label {
        color: $black;
        padding-top: 8px;
    }
}

.more {
    font-size: .875rem;
}

.people {
    a {
        color: $rich-black;
    }

    img {
        width: 250px;
    }
}

// 4.4 Sidebar

.sidebar {
    background: scale-color($primary-color, $lightness: 85%);
    border-left: 1px solid scale-color($primary-color, $lightness: 55%);

    .menu {
        .active {
            background: scale-color($secondary-color, $lightness: 40%);
        }

        a {
            color: $rich-black;

            &:hover {
                background: scale-color($primary-color, $lightness: 70%);
                text-decoration: none;
            }
        }

        li {
            border-top: 3px solid lighten($primary-color, 70%);
        }

        li li {
            background: rgba($primary-color, .1);
        }

        &.accordion-menu {
            button,
            .button {
                background: rgba($primary-color, .2);
                height: 42px;

                &:hover {
                    background: scale-color($primary-color, $lightness: 70%);
                }
            }
        }
    }
}

// 4.5 Footer

footer {

    a {
        color: lighten($secondary-color, 15%);
    }

    ul,
    ol {
        padding: 0;
    }

    li {
        list-style: none;
    }

    .menu {
        padding-top: 1rem;
    }

    .partners-funders {
        background: white;
        color: $primary-color;
        text-align: center;

        img {
            max-height: 120px;
        }
    }
}

.byline {
    color: black;
    font-size: 12px;
    margin: .5rem 0;
}

// Cookies box

.cookies-box {
    background: $primary-color;
    bottom: 0;
    color: white;
    left: 0;
    margin: 0;
    opacity: 0.95;
    padding-top: 1rem;
    position: fixed;
    text-align: center;
    width: 100%;
}


// 4.6 Images

// See media queries

.caption {
    font-size: rem-calc(14);
    font-style: italic;
    margin-top: .5rem;
}

.image-block {
    width: 100%;

    img {
        width: 100%;
    }
}

main {
    img {
        border: 8px solid white;
    }
}

.richtext-image {
    margin-bottom: 1rem;
}
/* ... */

